--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ Hello there, awesome person!
     <img src="https://octodex.github.com/images/vinyltocat.png">\
     <ol>
     <li>This</li>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
     <li>Is an</li>
     <li>Ordered list</li>
 </ol>
