--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
-  
-    <head>
-        <title>My awesome web page</title>
+      <head>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
     </head>
+
   <body>
     <h1>I'm a header 1!</h1>
 Hello there, awesome person!
